--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -15,11 +15,11 @@ html {
   }
 
   @include breakpoint($large) {
-    font-size: 18px; /* was 20 */
+    font-size: 20px;
   }
 
   @include breakpoint($x-large) {
-    font-size: 18px; /*was 22 */
+    font-size: 22px;
   }
 
   -webkit-text-size-adjust: 100%;
