--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,4 +2,9 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+<style>
+.page__content {
+  text-align: justify;
+}
+</style>
 <!-- end custom head snippets -->
