--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom footer snippets -->
-test
+<div style="font-size:x-small">Living apps sprl, rue Van Bortonne 7, 1090 Brussels, Belgium - TVA/RC BE 0564 821 397</div><br>
 <!-- end custom footer snippets -->
